--- a/XUnitTestProject/XUnitTestProject.csproj
+++ b/XUnitTestProject/XUnitTestProject.csproj
@@ -11,15 +11,31 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
 		<PackageReference Include="NFluent" Version="2.6.0" />
 		<PackageReference Include="NSubstitute" Version="4.2.1" />
 		<PackageReference Include="refit" Version="5.1.67" />
 		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.console" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.3.57" />
 		<PackageReference Include="SpecFlow.xUnit" Version="3.3.57" />
 	</ItemGroup>
+
+	<ItemGroup> 
+		<PackageReference Update="coverlet.msbuild" Version="2.8.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="coverlet.collector" Version="1.2.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+	
 
 	<ItemGroup>
 		<SpecFlowFeatureFiles Update="*.feature">
